--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form">
-    <h1 align>Login</h1>  
+    <h1 align="center">Login</h1>  
     <input class="inputs" type="text" placeholder="Email"/>
     <input class="inputs" type="text" placeholder="Password"/>
     <input type="checkbox">
